- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    6.0.2
- 
    None
- 
    Qt 6.0.2, VS2019 64-bit, Windows 10 20H2
- 
        
- 
        f226854d256a382a5cc7ff08b10a0d27fbefb0fe (qt/qtbase/dev) 341654213bfd02a448490212e3b9b0d2027dfd2f (qt/qtbase/6.0) 3c224d11228f2560d99078d5f0bf91237657def1 (qt/qtbase/6.1)
Using the following code the program crashes.
QMultiHash count crash
int main(int argc, char *argv[]) { QCoreApplication a(argc, argv); QMultiHash<int,int> hash; hash.count(2); return a.exec(); }
- relates to
- 
                    QTBUG-89687 QMultiHash::equal_range crashes when called in a const member function -         
- Closed
 
-         
- 
                    QTBUG-91736 Ensure Qt containers behave correctly when empty -         
- Closed
 
-