Fix QMultiHash::count(key) crash

As QMultiHash uses a pointer for the data, nullptr dereference is a
thing, so check for valid d before doing anything in count()

Fixes: QTBUG-91704
Change-Id: Ia20440cd7bdc03cb09c77f796fb9c5b52765eac5
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit f226854d256a382a5cc7ff08b10a0d27fbefb0fe)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>